[package]
name = "profusion"
version = "0.1.0"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]
edition = "2018"
repository = "https://github.com/EcomDev/profusion-rs"
license = "MIT"

[lib]
name = "profusion"
crate-type = [ "lib" ]

[dependencies.tokio]
version = "1.6"
features = [ "rt", "time", "macros" ]

[dependencies.futures]
version = "0.3"

[dev-dependencies]
loom = "0.5"
tokio = { version = "1.6", features = ["full"] }

[features]
test = []

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
codegen-units = 1
lto = false
