[package]
name = "profusion"
version = "0.1.0"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]
edition = "2021"
repository = "https://github.com/EcomDev/profusion-rs"
license = "MIT"

[lib]
name = "profusion"
crate-type = [ "lib" ]

[dependencies] 
tokio = { version = "1", features=["rt", "time", "macros"] }
pin-project-lite = "0.2"
hdrhistogram = "7"
more-asserts = { version = "0.3", optional = true }

[dev-dependencies]
loom = "0.5"
itertools = "0.10.3"
criterion = "0.3"
tokio = { version = "1", features=["rt", "time", "macros", "rt-multi-thread"] }

[features]
default = [ "test" ]
test = [ "more-asserts" ]

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
codegen-units = 1
lto = false

[[bench]]
name = "aggregator_benchmark"
harness = false