[package]
name = "profusion"
version = "0.1.0"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]
edition = "2021"
repository = "https://github.com/EcomDev/profusion-rs"
license = "MIT"
rust-version = "1.77.0"

[lib]
name = "profusion"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1", features = ["rt", "time", "macros", "test-util"] }
pin-project-lite = "0.2"
hdrhistogram = "7"
thiserror = "1"
smallvec = "1"
trait-variant = "0.1.2"

[dev-dependencies]
loom = "0.7"
itertools = "0.12"
criterion = { version = "0.5", features = ["default", "async_tokio"] }
tokio = { version = "1", features = ["rt", "time", "macros", "rt-multi-thread", "test-util"] }

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
codegen-units = 1
lto = false

[[bench]]
name = "aggregator_benchmark"
harness = false

[[bench]]
name = "aggregator_metric_lookup"
harness = false

[features]
test_util = []