[package]
name = "profusion-macros"
version = "0.1.0"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]
edition = "2021"
repository = "https://github.com/EcomDev/profusion-rs"
license = "MIT"
rust-version = "1.77.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "~1.0" }
syn = { version = "~2.0", features = ["full"] }
quote = { version = "~1.0" }

[dev-dependencies]
profusion = { version = "0.1.0", path = "../profusion", features = ["full"] }